--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div id = "content">
-        <div id = "display">123456789</div>
+    <div id = "content" class = "content">
+        <div id = "display" class = "display">123456789</div>
         <div id = "buttons">
             <button id = "C" class = "operator">C</button>
             <button id = "/" class = "operator">/</button>
