Add CSS to start arranging buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id = "content" class = "content">
         <div id = "display" class = "display">123456789</div>
-        <div id = "buttons">
+        <div id = "buttons" class = "buttons">
             <button id = "C" class = "operator">C</button>
             <button id = "/" class = "operator">/</button>
             <button id = "*" class = "operator">*</button>
