Change height of + button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button id = "7" class = "number">7</button>
             <button id = "8" class = "number">8</button>
             <button id = "9" class = "number">9</button>
-            <button id = "+" class = "operator">+</button>
+            <button id = "+" class = "plus">+</button>
             <button id = "4" class = "number">4</button>
             <button id = "5" class = "number">5</button>
             <button id = "6" class = "number">6</button>
