--- a/index.html
+++ b/index.html
@@ -11,23 +11,27 @@
     <div id = "content" class = "content">
         <div id = "display" class = "display">123456789</div>
         <div id = "buttons" class = "buttons">
-            <button id = "C" class = "operator">C</button>
-            <button id = "/" class = "operator">/</button>
-            <button id = "*" class = "operator">*</button>
+            <div id = "numbers" class = "numberBox">
+                <button id = "C" class = "operator">C</button>
+                <button id = "/" class = "operator">/</button>
+                <button id = "*" class = "operator">*</button>
+                <button id = "7" class = "number">7</button>
+                <button id = "8" class = "number">8</button>
+                <button id = "9" class = "number">9</button>
+                <button id = "4" class = "number">4</button>
+                <button id = "5" class = "number">5</button>
+                <button id = "6" class = "number">6</button>
+                <button id = "1" class = "number">1</button>
+                <button id = "2" class = "number">2</button>
+                <button id = "3" class = "number">3</button>
+                <button id = "0" class = "number">0</button>
+                <button id = "." class = "number">.</button>
+            </div>
+            <div id = "right" class = "right">
             <button id = "-" class = "operator">-</button>
-            <button id = "7" class = "number">7</button>
-            <button id = "8" class = "number">8</button>
-            <button id = "9" class = "number">9</button>
             <button id = "+" class = "plus">+</button>
-            <button id = "4" class = "number">4</button>
-            <button id = "5" class = "number">5</button>
-            <button id = "6" class = "number">6</button>
-            <button id = "1" class = "number">1</button>
-            <button id = "2" class = "number">2</button>
-            <button id = "3" class = "number">3</button>
             <button id = "=" class = "operator">=</button>
-            <button id = "0" class = "number">0</button>
-            <button id = "." class = "number">.</button>
+            </div>
         </div>
     </div>
     
