Add second class to right side button elements for formatting

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <button id = "." class = "number">.</button>
             </div>
             <div id = "right" class = "right">
-            <button id = "-" class = "operator">-</button>
-            <button id = "+" class = "plus">+</button>
-            <button id = "=" class = "operator">=</button>
+                <button id = "-" class = "operator rightRow">-</button>
+                <button id = "+" class = "plus rightRow">+</button>
+                <button id = "=" class = "operator rightRow">=</button>
             </div>
         </div>
     </div>
