--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <button id = "1" class = "number">1</button>
                 <button id = "2" class = "number">2</button>
                 <button id = "3" class = "number">3</button>
-                <button id = "0" class = "number">0</button>
+                <button id = "0" class = "number zero">0</button>
                 <button id = "." class = "number">.</button>
             </div>
             <div id = "right" class = "right">
                 <button id = "-" class = "operator rightRow">-</button>
-                <button id = "+" class = "plus rightRow">+</button>
-                <button id = "=" class = "operator rightRow">=</button>
+                <button id = "+" class = "operator plus rightRow">+</button>
+                <button id = "=" class = "operator equals rightRow">=</button>
             </div>
         </div>
     </div>
