--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id = "content" class = "content">
-        <div id = "display" class = "display">123456789</div>
+        <div id = "display" class = "display">0</div>
         <div id = "buttons" class = "buttons">
             <div id = "numbers" class = "numberBox">
                 <button id = "C" class = "operator">C</button>
