Change clear button abbreviatin to AC to make it more understandable

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id = "display" class = "display">0</div>
         <div id = "buttons" class = "buttons">
             <div id = "numbers" class = "numberBox">
-                <button id = "C" class = "operator">C</button>
+                <button id = "AC" class = "operator">AC</button>
                 <button id = "/" class = "operator">/</button>
                 <button id = "*" class = "operator">*</button>
                 <button id = "7" class = "number">7</button>
