--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id = "buttons" class = "buttons">
             <div id = "numbers" class = "numberBox">
                 <button id = "AC" class = "operator">AC</button>
-                <button id = "/" class = "operator">/</button>
-                <button id = "*" class = "operator">*</button>
+                <button id = "C" class = "operator">C</button>
+                <button id = "BS" class = "operator">BS</button>
                 <button id = "7" class = "number">7</button>
                 <button id = "8" class = "number">8</button>
                 <button id = "9" class = "number">9</button>
@@ -28,6 +28,8 @@
                 <button id = "." class = "number">.</button>
             </div>
             <div id = "right" class = "right">
+                <button id = "/" class = "operator rightRow">/</button>
+                <button id = "*" class = "operator rightRow">*</button>
                 <button id = "-" class = "operator rightRow">-</button>
                 <button id = "+" class = "operator plus rightRow">+</button>
                 <button id = "=" class = "operator equals rightRow">=</button>
