Style calcumator to resemble iphone theme

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div id = "display" class = "display">0</div>
         <div id = "buttons" class = "buttons">
             <div id = "numbers" class = "numberBox">
-                <button id = "AC" class = "operator">AC</button>
-                <button id = "C" class = "operator">C</button>
-                <button id = "BS" class = "operator">BS</button>
+                <button id = "AC" class = "operator extra">AC</button>
+                <button id = "C" class = "operator extra ">C</button>
+                <button id = "BS" class = "operator extra">BS</button>
                 <button id = "7" class = "number">7</button>
                 <button id = "8" class = "number">8</button>
                 <button id = "9" class = "number">9</button>
